Fix text overflow issues

--- a/src/web/app/pages-admin/admin-accounts-page/admin-accounts-page.component.scss
+++ b/src/web/app/pages-admin/admin-accounts-page/admin-accounts-page.component.scss
@@ -1,3 +1,8 @@
 .control-label {
   font-weight: 600;
 }
+
+.td-text-break {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
