--- a/src/web/app/pages-instructor/instructor-audit-logs-page/instructor-audit-logs-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-audit-logs-page/instructor-audit-logs-page.component.scss
@@ -13,3 +13,8 @@
 .no-activity-body {
   padding: .5rem 1rem;
 }
+
+#feedback-session-details {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
