--- a/src/web/app/pages-instructor/instructor-student-list-page/instructor-student-list-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-student-list-page/instructor-student-list-page.component.scss
@@ -6,3 +6,8 @@
 .inline {
   display: inline;
 }
+
+#course-details {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
